Initial commit for spmemo

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app='myapp'>
+<html lang="en" ng-app='spmemo'>
 <head>
   <meta charset="UTF-8">
   <script src="components/angular/angular.min.js"></script>
