--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,31 @@
   <script src="app.js"></script>
   <script src="controllers/helloCtrl.js"></script>
 
-  <title>template app</title>
+  <title>Single page memo app</title>
 
 </head>
 <body ng-controller="HelloController as vm">
-  <div id="greeting"><h1>hello, world!</h1></div>
-  <button id="call" ng-click="vm.setTagline('Did you call me?')">call</button>
-  <button id="ajaxcall" ng-click="vm.process('Did you call me?')">ajax call</button>
-  <p id='tagline'>{{ vm.tagline }}</p>
+  <h1> Single Page Memo App </h1>
+  <div>
+    <input type="text" id="titlebox" ng-model='vm.title' placeholder="Title of the memo" />
+    <textarea id="docbox" ng-model='vm.doc'></textarea>
+    <textarea id="codebox"ng-model='vm.code'></textarea>
+    <button id="addmemo" ng-click='vm.addMemo()'>Add</button>
+  </div>
+
+  <div>
+    <table id="contentsTbl">
+      <tr id="{{ memo.title }}" ng-repeat="memo in vm.memos" class="item">
+        <td class="doc">
+          <h3 class="title">{{ memo.title }}</h3> 
+          <p class="description">{{ memo.doc }}</p>
+        </td>
+        <td class="code">
+          <div>{{ memo.code }}</div>
+        </td>
+      </tr>
+    </table>
+  </div>
+
 </body>
 </html>
