--- a/public/index.html
+++ b/public/index.html
@@ -3,34 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <script src="components/angular/angular.min.js"></script>
+  <script src="components/angular-route/angular-route.min.js"></script>
   <script src="app.js"></script>
-  <script src="controllers/helloCtrl.js"></script>
+  <script src="routes.js"></script>
+  <script src="controllers/mainCtrl.js"></script>
 
   <title>Single page memo app</title>
 
 </head>
-<body ng-controller="HelloController as vm">
+<body>
   <h1> Single Page Memo App </h1>
-  <div>
-    <input type="text" id="titlebox" ng-model='vm.title' placeholder="Title of the memo" />
-    <textarea id="docbox" ng-model='vm.doc'></textarea>
-    <textarea id="codebox"ng-model='vm.code'></textarea>
-    <button id="addmemo" ng-click='vm.addMemo()'>Add</button>
-  </div>
-
-  <div>
-    <table id="contentsTbl">
-      <tr id="{{ memo.title }}" ng-repeat="memo in vm.memos" class="item">
-        <td class="doc">
-          <h3 class="title">{{ memo.title }}</h3> 
-          <p class="description">{{ memo.doc }}</p>
-        </td>
-        <td class="code">
-          <div>{{ memo.code }}</div>
-        </td>
-      </tr>
-    </table>
-  </div>
-
+ <div ng-view></div>
 </body>
 </html>
