--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <script src="components/angular/angular.min.js"></script>
   <script src="components/angular-route/angular-route.min.js"></script>
+  <script src="components/jquery/dist/jquery.min.js"></script>
+  <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="app.js"></script>
   <script src="routes.js"></script>
   <script src="controllers/mainCtrl.js"></script>
+  <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css" />
 
   <title>Single page memo app</title>
 
