--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,15 @@
   <script src="components/angular/angular.min.js"></script>
   <script src="components/angular-route/angular-route.min.js"></script>
   <script src="components/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="components/angular-bootstrap/ui-bootstrap.min.js"></script>
+  <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="components/marked/lib/marked.js"></script>
   <script src="components/angular-marked/angular-marked.js"></script>
   <script src="app.js"></script>
   <script src="routes.js"></script>
   <script src="controllers/mainCtrl.js"></script>
+  <script src="controllers/modalInstanceCtrl.js"></script>
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="components/highlightjs/styles/solarized_dark.css" />
   <link rel="stylesheet" href="css/spmemo.css" />
