Add edit-a-memo feature [finished ##107200810]

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   <script src="routes.js"></script>
   <script src="controllers/mainCtrl.js"></script>
   <script src="controllers/modalInstanceCtrl.js"></script>
+  <script src="services/memoService.js"></script>
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="components/highlightjs/styles/solarized_dark.css" />
   <link rel="stylesheet" href="css/spmemo.css" />
