--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,15 @@
   <script src="components/angular/angular.min.js"></script>
   <script src="components/angular-route/angular-route.min.js"></script>
   <script src="components/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="components/angular-animate/angular-animate.min.js"></script>
+  <script src="components/angular-toastr/dist/angular-toastr.min.js"></script>
+  <script src="components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
   <script src="components/angular-bootstrap/ui-bootstrap.min.js"></script>
   <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="components/marked/lib/marked.js"></script>
   <script src="components/angular-marked/dist/angular-marked.js"></script>
+  <script src="components/angular-clipboard/angular-clipboard.js"></script>
   <script src="app.js"></script>
   <script src="routes.js"></script>
   <script src="controllers/mainCtrl.js"></script>
@@ -18,6 +22,7 @@
   <script src="services/memoService.js"></script>
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="components/highlightjs/styles/solarized_dark.css" />
+  <link rel="stylesheet" href="components/angular-toastr/dist/angular-toastr.min.css" />
   <link rel="stylesheet" href="css/spmemo.css" />
 
   <title>Single page memo app</title>
