Add sort feature [finished #108141260]

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <script src="components/jquery/dist/jquery.min.js"></script>
+  <script src="components/jquery-ui/jquery-ui.min.js"></script>
   <script src="components/angular/angular.min.js"></script>
   <script src="components/angular-route/angular-route.min.js"></script>
   <script src="components/angular-sanitize/angular-sanitize.min.js"></script>
@@ -11,6 +12,7 @@
   <script src="components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
   <script src="components/angular-bootstrap/ui-bootstrap.min.js"></script>
   <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script src="components/angular-ui-sortable/sortable.min.js"></script>
   <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="components/marked/lib/marked.js"></script>
   <script src="components/angular-marked/dist/angular-marked.js"></script>
