Add Github filelist feature [finished #109137118]

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
   <script src="routes.js"></script>
   <script src="controllers/mainCtrl.js"></script>
   <script src="controllers/modalInstanceCtrl.js"></script>
+  <script src="controllers/githubModalInstanceCtrl.js"></script>
   <script src="services/memoService.js"></script>
+  <script src="services/githubService.js"></script>
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="components/highlightjs/styles/solarized_dark.css" />
   <link rel="stylesheet" href="components/angular-toastr/dist/angular-toastr.min.css" />
