--- a/public/index.html
+++ b/public/index.html
@@ -2,40 +2,48 @@
 <html lang="en" ng-app='spmemo'>
 <head>
   <meta charset="UTF-8">
-  <script src="components/jquery/dist/jquery.min.js"></script>
-  <script src="components/jquery-ui/jquery-ui.min.js"></script>
-  <script src="components/angular/angular.min.js"></script>
-  <script src="components/angular-route/angular-route.min.js"></script>
-  <script src="components/angular-sanitize/angular-sanitize.min.js"></script>
-  <script src="components/angular-animate/angular-animate.min.js"></script>
-  <script src="components/angular-toastr/dist/angular-toastr.min.js"></script>
-  <script src="components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
-  <script src="components/angular-bootstrap/ui-bootstrap.min.js"></script>
-  <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-  <script src="components/angular-ui-sortable/sortable.min.js"></script>
-  <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="components/marked/lib/marked.js"></script>
-  <script src="components/angular-marked/dist/angular-marked.js"></script>
-  <script src="components/angular-clipboard/angular-clipboard.js"></script>
-  <script src="app.js"></script>
-  <script src="routes.js"></script>
-  <script src="controllers/mainCtrl.js"></script>
-  <script src="controllers/modalInstanceCtrl.js"></script>
-  <script src="controllers/githubModalInstanceCtrl.js"></script>
-  <script src="services/memoService.js"></script>
-  <script src="services/githubService.js"></script>
-  <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css" />
+  <!-- bower:css -->
+  <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="components/highlightjs/styles/solarized_dark.css" />
-  <link rel="stylesheet" href="components/angular-toastr/dist/angular-toastr.min.css" />
-  <link rel="stylesheet" href="css/spmemo.css" />
+  <link rel="stylesheet" href="components/angular-toastr/dist/angular-toastr.css" />
+  <!-- endbower -->
+  <!-- inject:css -->
+  <link rel="stylesheet" href="css/spmemo.css">
+  <!-- endinject -->
 
   <title>Single page memo app</title>
 
-</head>
-<body>
+  </head>
+  <body>
 
-  <div ng-view></div>
+    <div ng-view></div>
 
-  <script src="components/highlightjs/highlight.pack.min.js"></script>
-</body>
+    <!-- bower:js -->
+    <script src="components/jquery/dist/jquery.js"></script>
+    <script src="components/angular/angular.js"></script>
+    <script src="components/angular-route/angular-route.js"></script>
+    <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="components/marked/lib/marked.js"></script>
+    <script src="components/angular-marked/dist/angular-marked.js"></script>
+    <script src="components/highlightjs/highlight.pack.js"></script>
+    <script src="components/angular-clipboard/angular-clipboard.js"></script>
+    <script src="components/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="components/angular-animate/angular-animate.js"></script>
+    <script src="components/jquery-ui/jquery-ui.js"></script>
+    <script src="components/angular-ui-sortable/sortable.js"></script>
+    <!-- endbower -->
+    <!-- inject:js -->
+    <script src="app.js"></script>
+    <script src="routes.js"></script>
+    <script src="controllers/githubModalInstanceCtrl.js"></script>
+    <script src="controllers/mainCtrl.js"></script>
+    <script src="controllers/modalInstanceCtrl.js"></script>
+    <script src="services/githubService.js"></script>
+    <script src="services/memoService.js"></script>
+    <!-- endinject -->
+
+  </body>
+
+
 </html>
