--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="components/highlightjs/styles/solarized_dark.css" />
   <link rel="stylesheet" href="components/angular-toastr/dist/angular-toastr.css" />
+  <link rel="stylesheet" href="components/font-awesome/css/font-awesome.css" />
   <!-- endbower -->
   <!-- inject:css -->
   <link rel="stylesheet" href="css/spmemo.css">
@@ -21,6 +22,7 @@
     <!-- bower:js -->
     <script src="components/jquery/dist/jquery.js"></script>
     <script src="components/angular/angular.js"></script>
+    <script src="components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="components/angular-route/angular-route.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="components/angular-sanitize/angular-sanitize.js"></script>
