--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
     <script src="components/angular-animate/angular-animate.js"></script>
     <script src="components/jquery-ui/jquery-ui.js"></script>
     <script src="components/angular-ui-sortable/sortable.js"></script>
+    <script src="components/ngstorage/ngStorage.js"></script>
     <!-- endbower -->
     <!-- inject:js -->
     <script src="app.js"></script>
@@ -43,6 +44,7 @@
     <script src="controllers/modalInstanceCtrl.js"></script>
     <script src="services/githubService.js"></script>
     <script src="services/memoService.js"></script>
+    <script src="services/storageService.js"></script>
     <!-- endinject -->
 
   </body>
